New style for buttons

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -39,7 +39,11 @@
 <body class="app">
     <section id="test-1" class="pop">
         <header data-title="Test-1" class="extended">
-            <a href="#kitchen-sink-scroll" class="button onleft" data-target="aside" data-icon="items"></a>
+            <div class="onleft">
+                <a href="#kitchen-sink-scroll" class="button default onleft" data-target="aside" data-icon="items"></a>
+                <a href="#kitchen-sink-scroll" class="button onleft" data-target="aside" data-icon="items">Prueba</a>
+                <a href="#kitchen-sink-scroll" class="button onleft" data-target="aside">Prueba</a>
+            </div>
             <nav class="onright">
                 <a href="#" class="active" data-icon="star"></a>
                 <a href="#profiles" class="active"  data-target="aside" data-icon="plus">&nbsp;Add</a>
@@ -52,7 +56,7 @@
             <a href="#nav-2" data-target="article" data-icon="calendar">&nbsp;Calendar</a>
         </nav>
 
-<!--
+        <!--
         <footer class="toolbar with-labels">
             <nav>
                 <a href="#nav-1" data-target="article" data-icon="clock" data-label="Alarm"></a>
@@ -60,7 +64,8 @@
                 <a href="#nav-3" data-target="article" data-icon="mail" data-label="Emails" data-count="124"></a>
                 <a href="#nav-4" data-target="article" data-icon="phone" data-label="Calls" data-count="12"></a>
             </nav>
-        </footer> -->
+        </footer>
+        -->
 
         <footer class="toolbar">
             <nav>
