--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -42,16 +42,14 @@
     <section id="test-1" class="pop">
         <header class="extended">
             <nav class="onleft">
-                <a href="#kitchen-sink-scroll" class="active" data-target="aside" data-icon="home"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user"></a>
             </nav>
             <div class="onleft">
-                <span class="title with-subtitle">Javi Jiménez</span>
-                <span class="subtitle ">@souhavi</span>
+                <span class="title with-subtitle">Javi Jiménez Villar</span>
+                <span class="subtitle">@soyjavi</span>
             </div>
             <nav class="onright">
-                <a href="#profiles" class="active" data-target="aside" data-icon="plus"></a>
-
-                <a href="#" class="active" data-icon="mail" style="background: rgba(0, 255, 0, 0.4);"data-label="ENVIAR"></a>
+                <a href="#profiles" data-target="aside" data-icon="group"></a>
             </nav>
         </header>
 
@@ -151,9 +149,8 @@
                 <a href="#back" data-target="section" class="current" data-icon="left"></a>
             </nav>
 
-            <nav class="onright plain">
-                <a href="#" class="" data-icon="items" data-label="Text"></a>
-                <a href="#" class="" data-icon="remove"></a>
+            <nav class="onright ">
+                <a href="#" class="active" data-icon="mail" style="background: rgba(0, 255, 0, 0.4);"data-label="ENVIAR"></a>
             </nav>
         </header>
         <article></article>
