New manager of aside element

--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,9 +1,9 @@
 <aside id="kitchen-sink-scroll" class="scrollable">
     <div>
         <div class="title">Select a option</div>
-        <a href="#welcome" data-target="article" class="current" data-icon="wifi">Welcome</a>
-        <a href="#navigation" data-target="section" data-icon="map">Navigation</a>
-        <a href="#buttons" data-target="article" data-icon="plus" data-count="14">Buttons & Colours</a>
+        <a href="#nav-1" data-target="article" class="current" data-icon="clock">Alarm</a>
+        <a href="#nav-2" data-target="article" data-icon="calendar">Calendar</a>
+        <a href="#test-2" data-target="section" data-icon="plus" data-count="14">Buttons & Colours</a>
         <a href="#icons" data-target="article" data-icon="picture" data-count="94">Icons</a>
         <a href="#data-attributes" data-target="article" data-icon="tag" data-count="6">Data Attributes</a>
         <a href="#forms" data-target="section" data-icon="edit" data-count="7">Form Elements</a>
