--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -74,8 +74,8 @@
             <nav>
                 <a href="#nav-1" data-target="article" class="current"  data-icon="clock"></a>
                 <a href="#nav-2" data-target="article" data-icon="calendar" data-count="17"></a>
-                <a href="#nav-3" data-target="article" data-icon="mail" data-count="124"></a>
-                <a href="#nav-4" data-target="article" data-icon="phone" data-count="12"></a>
+                <a href="#a" data-target="article" data-icon="mail" data-count="124"></a>
+                <a href="#a" data-target="article" data-icon="phone" data-count="12"></a>
             </nav>
         </footer>
 
