New class "autohide" to data-target="aside"
Hide href when the screen is a tablet screen

--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,4 +1,4 @@
-<aside id="kitchen-sink-scroll" class="scrollable">
+<aside id="kitchen-sink-scroll" class="scrollable current">
     <div>
         <div class="title">Select a option</div>
         <a href="#nav-1" data-target="article" class="current" data-icon="clock">Alarm</a>
