--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -39,10 +39,10 @@
 <body class="app">
 
 
-    <section id="test-1" class="pop">
+    <section id="test-1" class="pop aside">
         <header class="extended">
             <nav class="onleft">
-                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" class="autohide" data-icon="user"></a>
             </nav>
             <div class="onleft">
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
