New class "mini" of <aside/> element.

--- a/examples/test/app/sections/aside.html
+++ b/examples/test/app/sections/aside.html
@@ -1,3 +1,18 @@
+<aside id="kitchen-sink-scroll" class="scrollable  mini">
+    <div>
+        <a href="#nav-1" data-target="article" class="current" data-icon="clock"></a>
+        <a href="#nav-2" data-target="article" data-icon="calendar"></a>
+        <a href="#test-2" data-target="section" data-icon="plus" data-count="14"></a>
+        <a href="#icons" data-target="article" data-icon="picture" data-count="94"></a>
+        <a href="#data-attributes" data-target="article" data-icon="tag" data-count="6"></a>
+        <a href="#forms" data-target="section" data-icon="edit" data-count="7"></a>
+        <a href="#lists" data-target="section" data-icon="items" data-count="5"></a>
+        <a href="#events" data-target="article" data-icon="user"></a>
+        <a href="#scrolls" data-target="article" data-icon="down"></a>
+    </div>
+</aside>
+
+<!--
 <aside id="kitchen-sink-scroll" class="scrollable current">
     <div>
         <div class="title">Select a option</div>
@@ -11,7 +26,7 @@
         <a href="#events" data-target="article" data-icon="user">Events</a>
         <a href="#scrolls" data-target="article" data-icon="down">Scrolls</a>
         <a href="#urls" data-target="article" data-icon="down">URL Scheme Reference</a>
-                <a href="#welcome" data-target="article" class="current" data-icon="wifi">Welcome</a>
+        <a href="#welcome" data-target="article" class="current" data-icon="wifi">Welcome</a>
         <a href="#navigation" data-target="section" data-icon="map">Navigation</a>
         <a href="#buttons" data-target="article" data-icon="plus" data-count="14">Buttons & Colours</a>
         <a href="#icons" data-target="article" data-icon="picture" data-count="94">Icons</a>
@@ -23,3 +38,4 @@
         <a href="#urls" data-target="article" data-icon="down">URL Scheme Reference</a>
     </div>
 </aside>
+-->
