--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -39,17 +39,17 @@
 <body class="app">
 
 
-    <section id="test-1" class="pop aside">
+    <section id="test-1" class="pop">
         <header class="extended">
             <nav class="onleft">
-                <a href="#kitchen-sink-scroll" data-target="aside" class="autohide" data-icon="user"></a>
+                <a href="#kitchen-sink-scroll" data-target="aside" data-icon="user"></a>
             </nav>
             <div class="onleft">
                 <span class="title with-subtitle">Javi Jiménez Villar</span>
                 <span class="subtitle">@soyjavi</span>
             </div>
             <nav class="onright">
-                <a href="#profiles" data-target="aside" data-icon="group"></a>
+                <a href="#profiles" data-target="aside"  class="autohide" data-icon="group"></a>
             </nav>
         </header>
 
@@ -69,7 +69,7 @@
             </nav>
         </footer>
         -->
-
+        <!--
         <footer class="toolbar">
             <nav>
                 <a href="#nav-1" data-target="article" class="current"  data-icon="clock"></a>
@@ -78,8 +78,7 @@
                 <a href="#a" data-target="article" data-icon="phone" data-count="12"></a>
             </nav>
         </footer>
-
-
+        -->
 
         <article id="nav-1" class="list indented scrollable">
 
