Nav links improved

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -48,7 +48,7 @@
                 <span class="subtitle">@soyjavi</span>
             </div>
             <nav class="onright">
-                <a href="#profiles" data-target="aside"  class="autohide" data-icon="group"></a>
+                <a href="#profiles" data-target="aside" class="autohide" data-icon="group"></a>
             </nav>
         </header>
 
@@ -57,7 +57,7 @@
             <a href="#nav-2" data-target="article" data-icon="calendar">&nbsp;Calendar</a>
         </nav>
 
-        <!--
+
         <footer class="toolbar with-labels">
             <nav>
                 <a href="#nav-1" data-target="article" data-icon="clock" data-label="Alarm"></a>
@@ -66,7 +66,7 @@
                 <a href="#nav-4" data-target="article" data-icon="phone" data-label="Calls" data-count="12"></a>
             </nav>
         </footer>
-        -->
+
         <!--
         <footer class="toolbar">
             <nav>
@@ -79,7 +79,6 @@
         -->
 
         <article id="nav-1" class="list indented scrollable">
-
             <ul class="form">
                 <li data-loading="black big"></li>
                 <li id="loading-code" style="background-color: grey;"></li>
@@ -145,11 +144,11 @@
     <section id="test-2" class="pop">
         <header data-title="Auto title centered">
             <nav class="onleft">
-                <a href="#back" data-target="section" class="current" data-icon="left"></a>
+                <a href="#" class="cancel" data-icon="close"  data-label="CANCEL"></a>
             </nav>
 
             <nav class="onright ">
-                <a href="#" class="active" data-icon="mail" style="background: rgba(0, 255, 0, 0.4);"data-label="ENVIAR"></a>
+                <a href="#" class="accept" data-icon="check" data-label="ACCEPT"></a>
             </nav>
         </header>
         <article></article>
